publication page ui

--- a/src/assets/stylesheets/pages/_new-pages.scss
+++ b/src/assets/stylesheets/pages/_new-pages.scss
@@ -21,6 +21,14 @@
       background-size: cover;
     }
   }
+
+  &.publication-banner {
+    .news-banner-wrap {
+      background: url("../../assets/images/revampImages/publications_banner.jpeg")
+        no-repeat;
+      background-size: cover;
+    }
+  }
 }
 
 .article-content-wrapper {
