publication page component ui

--- a/src/shared-components/article/article.scss
+++ b/src/shared-components/article/article.scss
@@ -65,7 +65,7 @@
   }
 
   .image-wrap {
-    max-width: 388px;
+    // max-width: 388px;
     margin: 0 rem(-34px) rem(24px);
     box-shadow: 0px 3px 6px #00000029;
     border-radius: rem(8px);
