--- a/src/shared-components/articleContent/articleContent.css
+++ b/src/shared-components/articleContent/articleContent.css
@@ -5,7 +5,7 @@
 /* flex Sass mixin */
 /* mixins end */
 .article-content-card {
-  box-shadow: 6px 0px 10px #1270a817;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.161);
   border-radius: 12px;
   background-color: #ffffff;
   flex-direction: column;
@@ -18,6 +18,9 @@
   @media (min-width: 992px) {
     .article-content-card {
       flex-direction: row; } }
+  @media (min-width: 992px) {
+    .article-content-card.publication-content-wrapper .article-content {
+      padding-right: 20%; } }
 
 .card-img-wrap img {
   width: 11.5rem;
