--- a/src/shared-components/bookInfo/bookInfo.css
+++ b/src/shared-components/bookInfo/bookInfo.css
@@ -4,18 +4,38 @@
 /* rem unit mixin */
 /* flex Sass mixin */
 /* mixins end */
-.book-info-card {
-  box-shadow: 0.1875rem 0px 0.875rem #335d7622;
-  border-radius: 0.5rem;
+.book-info-wrap {
   position: absolute;
   left: 0;
   bottom: -50px;
-  margin: 0 1rem;
   z-index: 9999;
+  width: 100%; }
+  @media (min-width: 992px) {
+    .book-info-wrap {
+      right: -3%;
+      min-width: 160px;
+      width: 160px;
+      left: unset;
+      bottom: unset;
+      top: 50%;
+      transform: translateY(-50%); } }
+
+.book-info-card {
+  box-shadow: 0.1875rem 0px 0.875rem rgba(51, 93, 118, 0.133);
+  border-radius: 0.5rem;
+  margin: 0 1rem;
   background-color: #fff;
   padding: 1rem; }
+  @media (min-width: 992px) {
+    .book-info-card {
+      margin: 0;
+      padding: 1rem 0.25rem; } }
   .book-info-card .top-content {
     margin-bottom: 1rem; }
+    @media (min-width: 992px) {
+      .book-info-card .top-content {
+        flex-direction: column;
+        padding: 0 1rem; } }
     .book-info-card .top-content > p {
       font-size: 0.875rem;
       line-height: 1.375rem;
@@ -23,6 +43,15 @@
       flex: 0 0 70%;
       margin-right: auto;
       font-weight: 600; }
+      @media (min-width: 992px) {
+        .book-info-card .top-content > p {
+          line-height: 1.125rem; } }
+  .book-info-card .bottom-content {
+    justify-content: space-between;
+    align-items: center; }
+    @media (min-width: 992px) {
+      .book-info-card .bottom-content {
+        flex-direction: column; } }
   .book-info-card .price-wrap {
     text-align: center; }
     @media (min-width: 992px) {
@@ -33,17 +62,43 @@
       line-height: 1.375rem;
       color: #ec6513;
       margin-bottom: 0.25rem; }
+      @media (min-width: 992px) {
+        .book-info-card .price-wrap > p {
+          line-height: 1rem;
+          margin-bottom: 0; } }
     .book-info-card .price-wrap span {
       font-size: 1rem;
       line-height: 1.375rem;
       color: #1000ff; }
+      @media (min-width: 992px) {
+        .book-info-card .price-wrap span {
+          font-size: 0.8125rem;
+          line-height: 1rem; } }
+  @media (min-width: 992px) {
+    .book-info-card .book-price-details {
+      margin-top: 1rem; } }
+  .book-info-card .book-price-details img {
+    width: 20px;
+    height: 20px;
+    display: none; }
+    @media (min-width: 992px) {
+      .book-info-card .book-price-details img {
+        display: block; } }
   .book-info-card .buy-now-btn {
     background-color: #cf4338;
     border-radius: 5px;
     color: #fff;
     border: none;
     width: auto;
-    padding: 0.3125rem 1rem; }
+    padding: 0.3125rem 1rem;
+    font-size: 0.9375rem;
+    line-height: 1rem; }
+    @media (min-width: 992px) {
+      .book-info-card .buy-now-btn {
+        width: 100%;
+        margin-bottom: 0.5rem;
+        font-size: 0.75rem;
+        line-height: 0.875rem; } }
     .book-info-card .buy-now-btn:hover, .book-info-card .buy-now-btn:active, .book-info-card .buy-now-btn.active, .book-info-card .buy-now-btn:focus {
       background-color: #cf4338;
       color: #fff;
@@ -59,3 +114,14 @@
   outline: unset;
   border-color: unset;
   box-shadow: unset; }
+
+.social-media-list {
+  margin: 0 -12px; }
+  @media (min-width: 992px) {
+    .social-media-list {
+      order: 2; } }
+  .social-media-list .social-media-item {
+    padding: 0 12px; }
+  .social-media-list .social-media-icon {
+    width: 16px;
+    height: 16px; }
