--- a/src/shared-components/newsBanner/newsBanner.css
+++ b/src/shared-components/newsBanner/newsBanner.css
@@ -4,20 +4,18 @@
 /* rem unit mixin */
 /* flex Sass mixin */
 /* mixins end */
-.news-banner-section {
-  position: relative; }
-  .news-banner-section::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #e86055;
-    width: 100%;
-    height: 2.75rem;
-    z-index: -1; }
+.news-banner-section::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #e86055;
+  width: 100%;
+  height: 2.75rem;
+  z-index: -1; }
 
-.news-banner-wrap {
+.banner-wrap {
   background: url("../../assets/images/revampImages/talks_banner.jpeg") no-repeat;
   background-size: cover;
   width: 100%;
@@ -29,15 +27,15 @@
   justify-content: center;
   align-items: center; }
   @media (min-width: 992px) {
-    .news-banner-wrap {
+    .banner-wrap {
       height: 19.6875rem;
       padding: 3rem 0;
       background-position: center center; } }
-  .news-banner-wrap h1 {
+  .banner-wrap h1 {
     font-size: 2.375rem;
     line-height: 2.8125rem; }
     @media (min-width: 992px) {
-      .news-banner-wrap h1 {
+      .banner-wrap h1 {
         font-size: 4.6875rem;
         line-height: 5.5625rem; } }
 
