css fixes in layout

--- a/src/assets/stylesheets/pages/_new-pages.scss
+++ b/src/assets/stylesheets/pages/_new-pages.scss
@@ -44,7 +44,7 @@
 .article-content-wrapper {
   // margin-top: rem(24px);
   // margin-bottom: rem(56px);
-  padding: rem(24px) 0;
+  padding: rem(24px) 0 rem(48px);
 
   @include media-breakpoint-up(lg) {
     padding: rem(80px) 0;
