--- a/src/shared-components/article/article.scss
+++ b/src/shared-components/article/article.scss
@@ -1,7 +1,7 @@
 @import "../../assets/stylesheets/core";
 
 .article-list {
-  padding: rem(64px) rem(48px) 0;
+  padding: rem(64px) rem(48px) rem(24px);
   background-color: #e6e6e6;
   flex-wrap: wrap;
 
@@ -13,11 +13,20 @@
 }
 
 .article-item-wrap {
-  margin-bottom: rem(24px);
-
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     padding: 0 rem(24px);
+    margin-bottom: rem(24px);
+  }
+  @include media-breakpoint-up(lg) {
     margin-bottom: 0;
+  }
+
+  &:not(:first-child) {
+    margin-top: rem(24px);
+
+    @include media-breakpoint-up(md) {
+      margin-top: 0;
+    }
   }
 }
 
@@ -30,10 +39,14 @@
   flex: 1;
   height: 100%;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     margin-bottom: 0;
-    max-width: rem(248px);
+    max-width: rem(285px);
     padding: rem(16px) rem(24px) rem(24px);
+  }
+
+  @include media-breakpoint-up(lg) {
+    max-width: rem(248px);
   }
 
   h1 {
@@ -42,7 +55,7 @@
     color: #333333;
     margin-bottom: rem(16px);
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) {
       font-size: rem(23px);
       line-height: rem(27px);
       margin-bottom: rem(8px);
@@ -56,7 +69,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) {
       font-size: rem(16px);
       line-height: rem(24px);
       -webkit-line-clamp: 3;
