--- a/src/shared-components/media/media.css
+++ b/src/shared-components/media/media.css
@@ -8,6 +8,11 @@
   margin-bottom: 1.5rem;
   max-width: 100%;
   width: 100%; }
+  @media (min-width: 768px) {
+    .media-item {
+      padding: 0 1.5rem;
+      margin-bottom: 3rem;
+      max-width: 22.5rem; } }
   @media (min-width: 992px) {
     .media-item {
       padding: 0 1.5rem;
