--- a/src/shared-components/testimonialItem/testimonialItem.css
+++ b/src/shared-components/testimonialItem/testimonialItem.css
@@ -12,8 +12,58 @@
   border-radius: 12px; }
   @media (min-width: 992px) {
     .testimonial-card-content {
-      margin-bottom: 2.5rem; } }
+      margin-bottom: 2.5rem;
+      padding: 3rem 3.5rem; } }
 
-@media (min-width: 992px) {
-  .client-profile {
-    flex-direction: column; } }
+.client-content {
+  flex-direction: column; }
+  @media (min-width: 992px) {
+    .client-content {
+      flex-direction: row; } }
+
+.client-profile {
+  margin-bottom: 1.5rem; }
+  @media (min-width: 992px) {
+    .client-profile {
+      min-width: 9.375rem;
+      text-align: center;
+      align-items: center;
+      flex-direction: column;
+      margin-bottom: 0;
+      margin-right: 2rem; } }
+  .client-profile .profile-img {
+    width: 6.25rem;
+    height: 6.25rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
+    @media (min-width: 992px) {
+      .client-profile .profile-img {
+        width: 7.8125rem;
+        height: 7.8125rem;
+        margin: 0 auto; } }
+
+.client-details h6,
+.client-details .client-designation-text,
+.client-details .client-company-text {
+  line-height: 1.375rem;
+  color: #333333; }
+
+.client-details h6 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem; }
+  @media (min-width: 992px) {
+    .client-details h6 {
+      margin-bottom: 1rem; } }
+
+.client-details .client-designation-text,
+.client-details .client-company-text {
+  font-size: 0.875rem; }
+
+.client-testimonial-info {
+  flex: 1; }
+  .client-testimonial-info p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: #333333; }
+    .client-testimonial-info p:not(:first-child) {
+      margin-top: 1.5rem; }
