--- a/src/shared-components/articleContent/articleContent.scss
+++ b/src/shared-components/articleContent/articleContent.scss
@@ -1,18 +1,17 @@
 @import "../../assets/stylesheets/core";
 
-.article-content-card {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.161);
-  border-radius: 12px;
-  background-color: #ffffff;
-  flex-direction: column;
-  padding: rem(24px) rem(24px) rem(48px);
+.article-content-card-item {
   margin-bottom: rem(24px);
-  position: relative;
-
+  @include media-breakpoint-up(md) {
+    padding: 0 rem(16px);
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
   @include media-breakpoint-up(lg) {
-    flex-direction: row;
+    padding: 0;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-bottom: rem(40px);
-    padding: rem(56px) rem(24px) rem(48px);
   }
 
   &:last-child {
@@ -20,6 +19,7 @@
       margin-bottom: 0;
     }
   }
+
   &.publication-content-wrapper {
     margin-bottom: rem(72px);
 
@@ -34,21 +34,30 @@
     }
 
     .article-content {
+      margin-bottom: rem(80px);
       @include media-breakpoint-up(lg) {
         padding-right: 20%;
+        margin-bottom: 0;
       }
     }
 
     .card-img-wrap {
       img {
-        width: rem(280px);
-        height: rem(225px);
-
-        @include media-breakpoint-up(lg) {
-          width: rem(185px);
-        }
+        width: rem(185px);
       }
     }
+  }
+}
+.article-content-card {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.161);
+  border-radius: 12px;
+  background-color: #ffffff;
+  flex-direction: column;
+  padding: rem(24px) rem(24px) rem(48px);
+
+  @include media-breakpoint-up(lg) {
+    flex-direction: row;
+    padding: rem(56px) rem(24px) rem(48px);
   }
 }
 
@@ -85,10 +94,5 @@
     font-size: rem(14px);
     line-height: rem(22px);
     color: #020449;
-    min-height: rem(142px);
-
-    @include media-breakpoint-up(lg) {
-      min-height: rem(114px);
-    }
   }
 }
