--- a/src/shared-components/article/article.css
+++ b/src/shared-components/article/article.css
@@ -7,8 +7,7 @@
 .article-list {
   padding: 4rem 3rem 1.5rem;
   background-color: #e6e6e6;
-  flex-wrap: wrap;
-  justify-content: center; }
+  flex-wrap: wrap; }
   @media (min-width: 992px) {
     .article-list {
       padding: 5rem 0;
