--- a/src/shared-components/media/media.scss
+++ b/src/shared-components/media/media.scss
@@ -1,20 +1,20 @@
 @import "../../assets/stylesheets/core";
 
 .media-item {
-  margin-bottom: rem(24px);
+  margin-bottom: rem(48px);
   max-width: 100%;
   width: 100%;
 
   @include media-breakpoint-up(md) {
     padding: 0 rem(24px);
     margin-bottom: rem(48px);
-    max-width: rem(360px);
+    max-width: rem(335px);
   }
 
   @include media-breakpoint-up(lg) {
     padding: 0 rem(24px);
     margin-bottom: rem(54px);
-    max-width: rem(374px);
+    max-width: rem(370px);
   }
 }
 
@@ -25,7 +25,7 @@
     border-radius: rem(16px 16px 0 0);
     height: auto;
     @include media-breakpoint-up(lg) {
-      height: rem(166px);
+      height: rem(180px);
     }
   }
 }
@@ -42,6 +42,7 @@
   }
 
   .profile-icon {
+    display: none;
     width: rem(40px);
     height: rem(40px);
     border-radius: 50%;
