--- a/src/assets/stylesheets/pages/_new-pages.scss
+++ b/src/assets/stylesheets/pages/_new-pages.scss
@@ -58,3 +58,23 @@
 .testimonial-section {
   padding: rem(24px) 0 rem(56px);
 }
+
+.testimonial-banner {
+  background: url("../../assets/images/revampImages/testimonial-bg.png")
+    no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 230px;
+
+  h2 {
+    font-size: rem(32px);
+    line-height: rem(37px);
+    color: $white;
+
+    @include media-breakpoint-up(lg) {
+      font-size: rem(48px);
+      line-height: rem(56px);
+    }
+  }
+}
