--- a/src/shared-components/media/media.css
+++ b/src/shared-components/media/media.css
@@ -19,21 +19,30 @@
       margin-bottom: 3.375rem;
       max-width: 23.125rem; } }
 
-.media-frame {
+.media {
   flex: 1; }
-  .media-frame iframe {
-    border-radius: 1rem 1rem 0 0;
-    height: auto; }
+  .media .media-frame {
+    padding: 0 0.75rem;
+    height: 100%;
+    width: 100%; }
+    @media (min-width: 768px) {
+      .media .media-frame {
+        height: 9.25rem; } }
     @media (min-width: 992px) {
-      .media-frame iframe {
-        height: 11.25rem; } }
+      .media .media-frame {
+        height: 10.5rem; } }
+    .media .media-frame iframe {
+      border-radius: 1rem 1rem 0 0;
+      height: 100%; }
 
 .media-content {
   background-color: #fff;
   border-radius: 0.75rem;
   padding: 4.5rem 1.5rem 1.5rem;
   margin-top: -4rem;
-  flex: 1; }
+  flex: 1;
+  width: 100%;
+  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.12); }
   @media (min-width: 992px) {
     .media-content {
       padding: 4.5rem 1rem 1.5rem; } }
