--- a/src/shared-components/media/media.scss
+++ b/src/shared-components/media/media.scss
@@ -18,14 +18,25 @@
   }
 }
 
-.media-frame {
+.media {
   // padding: 0 rem(8px);
   flex: 1;
-  iframe {
-    border-radius: rem(16px 16px 0 0);
-    height: auto;
+  .media-frame {
+    padding: 0 rem(12px);
+    height: 100%;
+    width: 100%;
+
+    @include media-breakpoint-up(md) {
+      height: rem(148px);
+    }
+
     @include media-breakpoint-up(lg) {
-      height: rem(180px);
+      height: rem(168px);
+    }
+
+    iframe {
+      border-radius: rem(16px 16px 0 0);
+      height: 100%;
     }
   }
 }
@@ -36,6 +47,8 @@
   padding: rem(72px 24px 24px);
   margin-top: rem(-64px);
   flex: 1;
+  width: 100%;
+  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.12);
 
   @include media-breakpoint-up(lg) {
     padding: rem(72px 16px 24px);
