--- a/src/shared-components/testimonialItem/testimonialItem.css
+++ b/src/shared-components/testimonialItem/testimonialItem.css
@@ -25,7 +25,7 @@
   margin-bottom: 1.5rem; }
   @media (min-width: 992px) {
     .client-profile {
-      min-width: 9.375rem;
+      width: 9.375rem;
       text-align: center;
       align-items: center;
       flex-direction: column;
