--- a/src/shared-components/bookInfo/bookInfo.css
+++ b/src/shared-components/bookInfo/bookInfo.css
@@ -29,29 +29,36 @@
   @media (min-width: 992px) {
     .book-info-card {
       margin: 0;
-      padding: 1rem 0.25rem; } }
+      padding: 1rem 0.25rem;
+      height: 16.25rem;
+      position: relative; } }
   .book-info-card .top-content {
     margin-bottom: 1rem; }
     @media (min-width: 992px) {
       .book-info-card .top-content {
         flex-direction: column;
         padding: 0 1rem; } }
-    .book-info-card .top-content > p {
+    .book-info-card .top-content > p a {
       font-size: 0.875rem;
       line-height: 1.375rem;
       color: #333333;
       flex: 0 0 70%;
       margin-right: auto;
-      font-weight: 600; }
+      font-weight: 600;
+      text-decoration: none; }
       @media (min-width: 992px) {
-        .book-info-card .top-content > p {
+        .book-info-card .top-content > p a {
           line-height: 1.125rem; } }
   .book-info-card .bottom-content {
     justify-content: space-between;
     align-items: center; }
     @media (min-width: 992px) {
       .book-info-card .bottom-content {
-        flex-direction: column; } }
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        padding: 0 0.5rem;
+        bottom: 1rem; } }
   .book-info-card .price-wrap {
     text-align: center; }
     @media (min-width: 992px) {
@@ -87,18 +94,21 @@
   .book-info-card .buy-now-btn {
     background-color: #cf4338;
     border-radius: 5px;
-    color: #fff;
     border: none;
     width: auto;
-    padding: 0.3125rem 1rem;
-    font-size: 0.9375rem;
-    line-height: 1rem; }
+    padding: 0.3125rem 1rem; }
+    .book-info-card .buy-now-btn a {
+      text-decoration: none;
+      font-size: 0.9375rem;
+      line-height: 1rem;
+      color: #fff; }
     @media (min-width: 992px) {
       .book-info-card .buy-now-btn {
         width: 100%;
-        margin-bottom: 0.5rem;
-        font-size: 0.75rem;
-        line-height: 0.875rem; } }
+        margin-bottom: 0.5rem; }
+        .book-info-card .buy-now-btn a {
+          font-size: 0.75rem;
+          line-height: 0.875rem; } }
     .book-info-card .buy-now-btn:hover, .book-info-card .buy-now-btn:active, .book-info-card .buy-now-btn.active, .book-info-card .buy-now-btn:focus {
       background-color: #cf4338;
       color: #fff;
