--- a/src/shared-components/articleContent/articleContent.scss
+++ b/src/shared-components/articleContent/articleContent.scss
@@ -80,13 +80,15 @@
   flex: 1;
 
   > a {
-    font-size: rem(18px);
-    line-height: rem(26px);
-    color: #020449;
-    margin-bottom: rem(24px);
+    h4 {
+      font-size: rem(18px);
+      line-height: rem(26px);
+      color: #020449;
+      margin-bottom: rem(24px);
 
-    @include media-breakpoint-up(lg) {
-      margin-bottom: rem(32px);
+      @include media-breakpoint-up(lg) {
+        margin-bottom: rem(32px);
+      }
     }
   }
 
