--- a/src/shared-components/bookInfo/bookInfo.scss
+++ b/src/shared-components/bookInfo/bookInfo.scss
@@ -148,6 +148,16 @@
   }
 }
 
+.buy-now-btn:not(:disabled):not(.disabled):active,
+.buy-now-btn:not(:disabled):not(.disabled).active,
+.show > .buy-now-btn.dropdown-toggle {
+  background-color: #cf4338;
+  color: #fff;
+  outline: unset;
+  border-color: unset;
+  box-shadow: unset;
+}
+
 .buy-now-btn:not(:disabled):not(.disabled):active:focus,
 .buy-now-btn:not(:disabled):not(.disabled).active:focus,
 .show > .buy-now-btn.dropdown-toggle:focus {
